--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>A Meaningful Page Title</title>
+  <title>Home Page -- Changes to be pushed to GitHub</title>
 </head>
 <body>
 	<nav></nav>
